tests/parser/switch/invalid_otherwise.m.out
In invalid_otherwise.m, line 8
|   case 2
|   ^^^^ error: expected KEYWORD(end), found KEYWORD(case) instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
