tests/parser/switch/invalid_otherwise.m
% (c) Copyright 2019 Florian Schanda

switch potato
  case 1
    x = 1;
  otherwise
    x = 2;
  case 2
    x = 3;
end
